2011-08-11 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Do not explicitly call 'modprobe lustre' in parallel (ticket #97).
	* Add more variables for paths in model file (ticket #68).

2011-02-16 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix ignored additional options for format command (ticket #93).

2011-01-23 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix too many ssh connection error (ticket #89).

2011-01-19 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Shorter progression messages (ticket #92).

2011-01-16 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Add support for 'tunefs' command (ticket #91).

2010-12-20 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix scalability issue with very large cluster(ticket #87).

2010-12-06 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix target selection errors when using -F.

2010-11-22 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Rewrite ModelFile handling class.
	  Configuration code improvements. Also fix #75.

2010-10-22 Stephane Thiell  <stephane.thiell@cea.fr>
	* Release: 0.909

2010-10-11 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Workaround for local target action sequence issue (#77).

2010-10-06 Olivier Hargoaa  <olivier.hargoaa@bull.fr>
	* Add journal_dev option on target mount when needed (#80).

2010-10-03 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix index declaration in model file (#24, #70).

2010-09-25 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Supports multiple nids per server and --network option (#74).

2010-09-22  Stephane Thiell  <stephane.thiell@cea.fr>
	* shine command man page update.

2010-09-02 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Some cleaning in shine.conf supported options. (#66)

2010-08-30 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix bug when using failover.
	* Fix bug when installing/removing configuration on ha_node (#72).

2010-08-18  Aurelien Degremont  <aurelien.degremont@cea.fr>